Next:
0002572: Implement icetop minbias hits
0001529: Some DOMs have bad ATWD chips and we need to be able to configure pDAQ so that only one chip gets read out
==============================================================

V00-02-02 11-29-07 John Jacobsen john@mail.npxdesigns.com
Issues:
0002071: UploadDOMs.py - Retry softboot/open/get iceboot prompt sequence in case of 'dropped doms'
0002070: UploadDOMs.py - Timeout for gunzip step is too short
0002079: domapptest.py - Fix maxint warning under RHEL4
0002081: domapptest.py - MessageSizePulserTest fails on pcts-hub02
0002087: domapptest.py - Futurewarnings on pcts-hub02 (RHEL4)
==============================================================

V00-02-01 11-13-07 John Jacobsen john@mail.npxdesigns.com
Issues:
0001903: Make MB upload procedure bulletproof
0001914: domapptest.py - IceTop charge stamps - exercise all 3 channels in 'auto' mode
0001813: DOMApp - charge histogramming needed
0001845: Wait for DOMAPP READY after starting domapp
0001755: domapptest.py did not stop on Thorsten's test hub at LBNL
==============================================================

V00-02-00 8-20-07 John Jacobsen john@mail.npxdesigns.com

Several improvements, some major, with the addition of several new tests
and options.

Issues:
0001718: Support multiple python distributions
0001717: Swap LC modes 4 and 5 
0001715: domapptest.py fails to reset status when test restarts
0001716: domapptest.py - MessageSizePulserTest fails on repeat
0001713: Test for issue 1711
0001703: domapptest.py - Make test for SLC header-only hits
0001693: domapptest.py - Add scaler deadtime test
0001690/1683: domapptest.py - Add test to verify that pedestal pattern data are monitored
0001686: domapptest.py - Allow user to select ONLY domapp-related tests
0001684: domapptest.py - Add ability to upload and test new domapp on the fly
0001676: domapptest.py - Adopt fast moni test to verify that new hit counters 